fixed navbar z-index and functionality on IOS

--- a/src/app/pages/news-page/news-page.component.scss
+++ b/src/app/pages/news-page/news-page.component.scss
@@ -678,7 +678,8 @@ nav {
       margin-bottom: 80px;
       justify-content: space-between;
       z-index: 1;
-    }
+      max-width: 310px;
+  }
   }
   .swiper-container {
     .top-section {
